--- a/GreenCharger/src/app/core/components/header/header.component.html
+++ b/GreenCharger/src/app/core/components/header/header.component.html
@@ -3,7 +3,7 @@
     <!-- Logo -->
     <div class="logo">
       <a routerLink="/" class="logo-link">
-        <img src="/assets/logo.png" alt="GreenCharger" class="logo-img" />
+        <img src="https://res.cloudinary.com/ddkvhnj27/image/upload/v1758400063/z7019344847597_aa447955326b74efcd30844f0ddafb97_mcbqgu.jpg" alt="GreenCharger" class="logo-img" />
         <span class="logo-text">GreenCharger</span>
       </a>
     </div>
