--- a/GreenCharger/src/app/core/components/footer/footer.component.html
+++ b/GreenCharger/src/app/core/components/footer/footer.component.html
@@ -80,7 +80,7 @@
     <div class="footer-bottom">
       <div class="footer-bottom-content">
         <div class="copyright">
-          <p>&copy; 2025 GREEN CHARGER. Phát triển bởi GREEN CHARGER.</p>
+          <p>&copy; 2025 GREEN CHARGER. Phát triển bởi PARK.</p>
         </div>
         <div class="footer-bottom-links">
           <a routerLink="/privacy" class="footer-bottom-link">Chính sách bảo mật</a>
