--- a/GreenCharger/src/app/admin/components/products/product-form/product-form.component.html
+++ b/GreenCharger/src/app/admin/components/products/product-form/product-form.component.html
@@ -1,12 +1,11 @@
-<div class="modal" [class.show]="isVisible">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">{{ mode === 'create' ? 'Thêm sản phẩm mới' : 'Chỉnh sửa sản phẩm' }}</h5>
-        <button type="button" class="close-button" (click)="onClose()">
-          <i class="fas fa-times"></i>
-        </button>
-      </div>
+<div class="modal-overlay" *ngIf="isVisible">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title">{{ mode === 'create' ? 'Thêm sản phẩm mới' : 'Chỉnh sửa sản phẩm' }}</h5>
+      <button type="button" class="close-btn" (click)="onClose()">
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
       <div class="modal-body">
         <!-- Error Message -->
         <div *ngIf="error" class="error-message">
@@ -165,4 +164,3 @@
       </div>
     </div>
   </div>
-</div>
